--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular2-materialize": "^15.1.10",
     "angularfire2": "^5.4.2",
     "animate.css": "^4.1.0",
+    "bootstrap": "^5.1.3",
     "file-saver": "^2.0.2",
     "firebase": "^7.15.5",
     "hammerjs": "^2.0.8",
@@ -38,12 +39,12 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
